# ChangeLog for kde-misc/homerun
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/homerun/ChangeLog,v 1.7 2014/05/02 22:20:37 johu Exp $

*homerun-1.2.4 (02 May 2014)

  02 May 2014; Johannes Huber <johu@gentoo.org> +homerun-1.2.4.ebuild,
  -homerun-1.2.2.ebuild:
  Version bump, remove old.

*homerun-1.2.3 (12 Apr 2014)

  12 Apr 2014; Johannes Huber <johu@gentoo.org> +homerun-1.2.3.ebuild,
  -homerun-1.2.1.ebuild:
  Version bump, remove old.

*homerun-1.2.2 (24 Mar 2014)

  24 Mar 2014; Johannes Huber <johu@gentoo.org> +homerun-1.2.2.ebuild,
  -homerun-1.2.0.ebuild:
  Version bump, remove old.

*homerun-1.2.1 (22 Mar 2014)

  22 Mar 2014; Johannes Huber <johu@gentoo.org> +homerun-1.2.1.ebuild,
  -homerun-1.1.0.ebuild:
  Version bump, remove old.

*homerun-1.2.0 (29 Jan 2014)

  29 Jan 2014; Manuel Rüger <mrueg@gentoo.org> +homerun-1.2.0.ebuild,
  -homerun-1.0.0.ebuild:
  Version bump. Cleanup old.

*homerun-1.1.0 (15 Jul 2013)

  15 Jul 2013; Johannes Huber <johu@gentoo.org> +homerun-1.1.0.ebuild:
  Version bump.

*homerun-1.0.0 (28 May 2013)

  28 May 2013; Johannes Huber <johu@gentoo.org> +homerun-1.0.0.ebuild,
  +metadata.xml:
  New package. Import from kde overlay.