@@ -1,26 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA256
 
-DIST homerun-1.2.3.tar.xz 207680 SHA256 156f0bea0b01be4f7c6a196123401ddbea573b97d26677c1faaff59b8cbe881a SHA512 b516e22de20afc12de55a445d23d8c6bfa531189e66027d019f0ef6e7f42cffbaf71d4ea0e4c345eb57b39b0d9e0bf7e64a045a089398d74727c29fa106258d8 WHIRLPOOL ebef0f6d0c09760af1c722b56bf1b3d33918759751c4b39dc246991d1c5fbee8b34a4e601241e23b3a97ead109632ee657283cfe5eeddb0cff5a728908095650
 DIST homerun-1.2.4.tar.xz 206108 SHA256 be277e7b7358a828ee86b1e121faf23ad35d0fe0677c370ba0760db5b64ac7da SHA512 6f7121b5acce140c9ed3084b529ecfca8a3a4bb0a21dc7fb53ac64a374453ffc52f894db79851057622568d8f084b9adb307a94b2c543e71485d4afbf90da80d WHIRLPOOL 46168877d1fd2fb11b0ced60898f189a8621e88dc5f56a5500894851c32f950ee61f6619e3d5992c7f28eaf307359773f92e64bd1204a015f75e7734cf0de970
-EBUILD homerun-1.2.3.ebuild 949 SHA256 f0a1444bfb32f55c30c8eccbbcc0d691f785475827d44879aae57a0f935cf972 SHA512 8b9c12c2712d9b1be8752d7f5746e3c9d542609cee4eb225ef12452471a7666f482405bb520a06297fa16639b701bc26ee7f0bc910187c4db5cd9e7fec27f00a WHIRLPOOL d4ac4d5cf9f90e086538fe390c3fd75dc6c0b752fe9ebdb31370bf01febbacc4d0a47730202c8ca4603781bfb9fec7c2d8b0e0777ea1b1dd6ca04db95a2326df
+DIST homerun-1.2.5.tar.xz 206912 SHA256 23f56511b3d64ed3ce979bd6a233aa3d864e9babd333524451d119ec6026c79e SHA512 66fd4db1acaf318002da1127cce0415b92b60bb8343934e6c0f9a93167fa3583f136f6d838c1890ebb2e99a1f4ee6c9374cad0da79b33e3f607130b7f7d42b89 WHIRLPOOL 8f14b4d37426c604b71451a79d686f5859ab206670221b674004b0c667cad807d0a5c1b25010a2dc45a34cd04e15dc71dfc79d5b45bd39cadff9b2c6115b9fd7
 EBUILD homerun-1.2.4.ebuild 943 SHA256 0f786301ffaf11b9fbfc947f7fd4c08ad1cb302e1b294dcc9133ffc8be169c5c SHA512 8e22860a5b6346dc806aed37363176a8a69dec481ac598cf1f9053eefa2e2bda7866c610582609e4482cab02014072231dc68595d5f2c85d03bfb79545f710fe WHIRLPOOL 3ee9a485a1244286c8a6cc9251c8b47a2b3089ad3603b25ee207ea1a84b0c7aee5985c2eb68216f0796fa67cc494c5edfaeb3e9b2bd9961508e56f8fe150cb96
-MISC ChangeLog 1255 SHA256 dca04cadf31f20b7777b1b1836b4d51ec8dedb485ad1b02dc90b036259507939 SHA512 bc7f194e3e3b8e4fc8fe88ac2b118503c54b822c2453ab4cd5eb48842c7b6dfa8c86014a8afea11e114ad5f2f8706375a479f5f0580d7ca2e9e1ccce6be8b738 WHIRLPOOL 85c2e4d2f6589fc78e1f972bd0a04747956994e316c1d5dfa30c7a12539ae93b335cd184c48e9b867cf6f8ef344e6c46945dabb35141b4ad4e4f19e355ff76ed
+EBUILD homerun-1.2.5.ebuild 946 SHA256 463087cbf6d26ec1bed939c42d1bf0348c95686e8ac9f45ffddddd1fc9b733d1 SHA512 e1e897eacd3d85f0b6ccf069e6770d669464f7e1aeadcf927ffbd062a4baa5221ebc257fcad73f67721d8998463542951a0cbdb30d89d16b03a1d79afd6c9849 WHIRLPOOL 71190c2205e363381a8b0c660d919d4d2531f532cc9bb63d5a2c8d23ac380f44f096eb8b3d6b079b88fd7e643f29576ae12cdda3fff412a79e34d9e7c215093d
+MISC ChangeLog 1410 SHA256 a98c9942a1205a28dd389a4d9e7c11fb7ebf1fa3966e12537285e582a965a4c6 SHA512 c5431b28a74d961f47abbb0ae5e0a2dd1594bc97184e812ddcafad08604274ff0bd31849fd8081f19a6f2fd7b79bc98238908d119bfaf06f9df1d13f544e2b43 WHIRLPOOL 0b0f60fd3f2fbd3cebe5ce4e8c27d0eacc29237a377748d05a8e51cff27c4d6091026ab0a03fdcf3faa0891ad9f9cfe348297beb189cf48eebc0d005182d19e1
 MISC metadata.xml 156 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a SHA512 0dcd7cfb246c4518ed1653cb06f5d2c7220ea90160a4b1a1da43edf5124b76d7104fe35a545178b6b3df19f5f3a3eb3f31ac1b4d169e3ca90d78be3e20e58b05 WHIRLPOOL df162e3d521df7decdd84d980e4bc71531bb8e05486c07102c554b529c10a1fb3374dda79d56b13bc037a2d230b4b8ff25702c7a1b86d703a24e8bfe7fe57642
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCAAGBQJTZBo6AAoJEGVpnaTzz9K9OkAP/juqnP1Mka3MOuOmPECackhQ
-HZZXgbi24qmmmvCw4I/+UB37SCACrq0saqDzELCuPb8giqtyqcDZghNlYr5AHRVy
-Jrka9itZiWhQKFrqSuWY7An6bUaJSLm97+43H3uYT4AdDwRqxGOEFCCMUKchEWI7
-x0yBwKDo1jqiBLvUd4SCxFCCyA6+owxbD4F3rVIN5d/AWOlCcD/O6I4I/Z+G0Xjg
-6bZP9vllvUFo5u3dpybXXuJ+W4fphIblDIZEe2pcLLwJFwzM8XrunEKcJc7PNpG4
-+LJbBRUK5vcs+IRVfQaKH7ur7OX6RtHk0mwhBcjHPOnpAqVA5AXpZx6ZLaDuZk/s
-1JLg+p1fDFigcyrlo2A5wthaPGg7O9f+6a1Z28zw3oTpR0nLeKN9uOX9tWpGTVqu
-V9qbUFC7JhGNvsFCivlUbDTHBohNm9uiggCeh8jGDs+Tp0GkgaT2iWoKlGA4Vsjk
-+L+EgE4FlUrdKdWOACI30BFTKh1GKus5CIJzy5thv46md/xBiQec7VbbVr4b9I8D
-0CX8WP5bh5KuBtXYWDdvnBP6solgdP1xeQeTiDy6j0DF+uFdLCLEK1EZay6rmh0x
-ERShRvw8A7+w7avHVUyuCO/yZuw5a54042k8EXEAlHnFLspiUK8pHtbHujeypjIQ
-g/sNq67t7I4btkW9CpUi
-=kL+Z
+iQIcBAEBCAAGBQJT8P0yAAoJEGVpnaTzz9K9d00P/3tmQrXBIy5kJSevG2YjGKkK
+9xAeARWzVRmN9dH1jzppCPGy/tyBwCq+Eh0W5kmthAvwAARQnPtY+tw4demsL9zM
+xcjG9V4hKvGu5SbLrRVDWpmvOqaoeQYTP2QXO3k9HFVKjHzFG2D+d6MUFOSTqXtR
+JJB6y2uXt+XSIqrk8uW2rOgVJ0yy2ZrAAUWoYQMuvu9C4mu51pTPnz0Yg+jcpBS7
+X4qGX8X6KJ17f37SKSLvNgqp0ci8UwXZZpVDmA+j6c47eEVoQg/A/DkO280BfeH4
+0cgh1dyVYoY8quVHoIJY1SgF2JrB0QveEe9cf3kRX4KEyoL50CwY3oCc7waDugPp
+XHZjILuwdwV+Twj1k6dY1icGXsF1B/1IQxZkWNdIj5b2zR+bLLpuVWW0P8QqPZEq
+ZeE8dkwcY6KcArjiENR0bd9EOKFtPFcUQ6M4g4f4k0prFdwVMSArNOwWTqGgWBgm
+RY5ht7mzLV8dfTSn0RDk6lOA0s6D8j0Rq92Qtt1eT4e2Us0Qq6nsR4eTFgsW8pxp
+fOGJW/6NVrhoFSyRXou6OmR4zXdeiqzTTOSGW09Qagz/0pQN30zUhWDVOF7t4h3+
+7zytMJFaV3NsSasIke3UXnhbbGfpOXuhAmNs2iGFWVaXcBhAiAlF5jpyF3ousk+i
+U+P3wIVKVr3shk8H8k8r
+=g1Kt
 -----END PGP SIGNATURE-----
