@@ -1,14 +1,14 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/homerun/homerun-1.2.3.ebuild,v 1.1 2014/04/12 21:19:01 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/homerun/homerun-1.2.5.ebuild,v 1.1 2014/08/17 19:06:20 johu Exp $
 
 EAPI=5
 
 DECLARATIVE_REQUIRED="always"
 VIRTUALX_REQUIRED="test"
 VIRTUALDBUS_TEST="true"
-KDE_LINGUAS="ca ca@valencia cs da de el es fi fr gl hu it nl pl pt pt_BR ro ru
-sk sl sv tr uk zh_CN"
+KDE_LINGUAS="ca ca@valencia cs da de el es fi fr gl hu it nl pl pt pt_BR ro sk
+sl sv tr uk zh_CN"
 KDE_MINIMAL="4.10"
 inherit kde4-base
 
