@@ -1,14 +1,0 @@
-DEFINED_PHASES=compile configure install postinst postrm preinst prepare setup test unpack
-DEPEND=>=kde-base/libkonq-4.10:4[aqua=] >=kde-base/libkworkspace-4.10:4[aqua=] >=sys-apps/sed-4 test? ( !prefix? ( x11-base/xorg-server[xvfb] ) x11-apps/xhost ) sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) dev-util/automoc virtual/pkgconfig !aqua? ( >=x11-libs/libXtst-1.1.0 x11-proto/xf86vidmodeproto ) >=dev-qt/qtdeclarative-4.8.5:4 dev-lang/perl >=dev-qt/qt3support-4.8.5:4[accessibility] >=dev-qt/qtcore-4.8.5:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.5:4 >=dev-qt/designer-4.8.5:4[-phonon] >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] >=dev-qt/qtscript-4.8.5:4 >=dev-qt/qtsql-4.8.5:4[qt3support] >=dev-qt/qtsvg-4.8.5:4 >=dev-qt/qttest-4.8.5:4 >=dev-qt/qtwebkit-4.8.5:4 >=kde-base/kdelibs-4.10:4[aqua=]
-DESCRIPTION=Application launcher for KDE Plasma desktop
-EAPI=5
-HOMEPAGE=https://projects.kde.org/projects/playground/base/homerun
-IUSE=debug linguas_ca linguas_ca@valencia linguas_cs linguas_da linguas_de linguas_el linguas_es linguas_fi linguas_fr linguas_gl linguas_hu linguas_it linguas_nl linguas_pl linguas_pt linguas_pt_BR linguas_ro linguas_ru linguas_sk linguas_sl linguas_sv linguas_tr linguas_uk linguas_zh_CN test aqua
-KEYWORDS=~amd64 ~x86
-LICENSE=GPL-2 LGPL-2.1 BSD
-RDEPEND=>=kde-base/libkonq-4.10:4[aqua=] >=kde-base/libkworkspace-4.10:4[aqua=] >=kde-base/plasma-workspace-4.10:4[aqua=] >=kde-base/oxygen-icons-4.10:4[aqua=] linguas_ca? ( >=kde-base/kde-l10n-4.10:4[aqua=,linguas_ca(+)] ) linguas_ca@valencia? ( >=kde-base/kde-l10n-4.10:4[aqua=,linguas_ca@valencia(+)] ) linguas_cs? ( >=kde-base/kde-l10n-4.10:4[aqua=,linguas_cs(+)] ) linguas_da? ( >=kde-base/kde-l10n-4.10:4[aqua=,linguas_da(+)] ) linguas_de? ( >=kde-base/kde-l10n-4.10:4[aqua=,linguas_de(+)] ) linguas_el? ( >=kde-base/kde-l10n-4.10:4[aqua=,linguas_el(+)] ) linguas_es? ( >=kde-base/kde-l10n-4.10:4[aqua=,linguas_es(+)] ) linguas_fi? ( >=kde-base/kde-l10n-4.10:4[aqua=,linguas_fi(+)] ) linguas_fr? ( >=kde-base/kde-l10n-4.10:4[aqua=,linguas_fr(+)] ) linguas_gl? ( >=kde-base/kde-l10n-4.10:4[aqua=,linguas_gl(+)] ) linguas_hu? ( >=kde-base/kde-l10n-4.10:4[aqua=,linguas_hu(+)] ) linguas_it? ( >=kde-base/kde-l10n-4.10:4[aqua=,linguas_it(+)] ) linguas_nl? ( >=kde-base/kde-l10n-4.10:4[aqua=,linguas_nl(+)] ) linguas_pl? ( >=kde-base/kde-l10n-4.10:4[aqua=,linguas_pl(+)] ) linguas_pt? ( >=kde-base/kde-l10n-4.10:4[aqua=,linguas_pt(+)] ) linguas_pt_BR? ( >=kde-base/kde-l10n-4.10:4[aqua=,linguas_pt_BR(+)] ) linguas_ro? ( >=kde-base/kde-l10n-4.10:4[aqua=,linguas_ro(+)] ) linguas_ru? ( >=kde-base/kde-l10n-4.10:4[aqua=,linguas_ru(+)] ) linguas_sk? ( >=kde-base/kde-l10n-4.10:4[aqua=,linguas_sk(+)] ) linguas_sl? ( >=kde-base/kde-l10n-4.10:4[aqua=,linguas_sl(+)] ) linguas_sv? ( >=kde-base/kde-l10n-4.10:4[aqua=,linguas_sv(+)] ) linguas_tr? ( >=kde-base/kde-l10n-4.10:4[aqua=,linguas_tr(+)] ) linguas_uk? ( >=kde-base/kde-l10n-4.10:4[aqua=,linguas_uk(+)] ) linguas_zh_CN? ( >=kde-base/kde-l10n-4.10:4[aqua=,linguas_zh_CN(+)] ) >=dev-qt/qtdeclarative-4.8.5:4 dev-lang/perl >=dev-qt/qt3support-4.8.5:4[accessibility] >=dev-qt/qtcore-4.8.5:4[qt3support,ssl] >=dev-qt/qtdbus-4.8.5:4 >=dev-qt/designer-4.8.5:4[-phonon] >=dev-qt/qtgui-4.8.5:4[accessibility,dbus(+)] >=dev-qt/qtscript-4.8.5:4 >=dev-qt/qtsql-4.8.5:4[qt3support] >=dev-qt/qtsvg-4.8.5:4 >=dev-qt/qttest-4.8.5:4 >=dev-qt/qtwebkit-4.8.5:4 >=kde-base/kdelibs-4.10:4[aqua=]
-RESTRICT=test
-SLOT=4
-SRC_URI=mirror://kde/stable/homerun/src/homerun-1.2.3.tar.xz
-_eclasses_=cmake-utils	da2974fcb060ec927e93a17c835afa67	eutils	06133990e861be0fe60c2b428fd025d9	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	kde4-base	ac5a39cce917ff325551988db062a3d0	kde4-functions	492237eb2823bdc02bc769530501f0ea	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	0f1760274637a138b99bb649202ea402	versionator	cd0bcdb170807e4a1984115e9d53a26f	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=5aefe3bcdfc3986f5322ebc59c2f26db
