@@ -4,10 +4,10 @@ DESCRIPTION=Open-source version of Google Chrome web browser
 EAPI=5
 HOMEPAGE=http://chromium.org/
 IUSE=bindist cups gnome gnome-keyring kerberos neon pulseaudio selinux +tcmalloc custom-cflags +linguas_am +linguas_ar +linguas_bg +linguas_bn +linguas_ca +linguas_cs +linguas_da +linguas_de +linguas_el +linguas_en_GB +linguas_es +linguas_es_LA +linguas_et +linguas_fa +linguas_fi +linguas_fil +linguas_fr +linguas_gu +linguas_he +linguas_hi +linguas_hr +linguas_hu +linguas_id +linguas_it +linguas_ja +linguas_kn +linguas_ko +linguas_lt +linguas_lv +linguas_ml +linguas_mr +linguas_ms +linguas_nb +linguas_nl +linguas_pl +linguas_pt_BR +linguas_pt_PT +linguas_ro +linguas_ru +linguas_sk +linguas_sl +linguas_sr +linguas_sv +linguas_sw +linguas_ta +linguas_te +linguas_th +linguas_tr +linguas_uk +linguas_vi +linguas_zh_CN +linguas_zh_TW test
-KEYWORDS=amd64 ~arm ~x86
+KEYWORDS=amd64 ~arm x86
 LICENSE=BSD
 RDEPEND=>=app-accessibility/speech-dispatcher-0.8:= app-arch/bzip2:= app-arch/snappy:= cups? ( dev-libs/libgcrypt:0= >=net-print/cups-1.3.11:= ) >=dev-libs/elfutils-0.149 dev-libs/expat:= dev-libs/icu:= >=dev-libs/jsoncpp-0.5.0-r1:= >=dev-libs/libevent-1.4.13:= dev-libs/libxml2:=[icu] dev-libs/libxslt:= dev-libs/nspr:= >=dev-libs/nss-3.14.3:= dev-libs/re2:= gnome? ( >=gnome-base/gconf-2.24.0:= ) gnome-keyring? ( gnome-base/libgnome-keyring:= ) >=media-libs/alsa-lib-1.0.19:= media-libs/flac:= media-libs/harfbuzz:=[icu(+)] media-libs/libexif:= >=media-libs/libjpeg-turbo-1.2.0-r1:= media-libs/libpng:0= >=media-libs/libwebp-0.4.0:= media-libs/speex:= pulseaudio? ( media-sound/pulseaudio:= ) sys-apps/dbus:= sys-apps/pciutils:= >=sys-libs/libcap-2.22:= sys-libs/zlib:=[minizip] virtual/udev x11-libs/libdrm x11-libs/gtk+:2= >=x11-libs/libXi-1.6.0:= x11-libs/libXinerama:= x11-libs/libXScrnSaver:= x11-libs/libXtst:= kerberos? ( virtual/krb5 ) selinux? ( sec-policy/selinux-chromium ) !=www-client/chromium-9999 x11-misc/xdg-utils virtual/ttf-fonts tcmalloc? ( !<x11-drivers/nvidia-drivers-331.20 )
 SLOT=0
 SRC_URI=https://commondatastorage.googleapis.com/chromium-browser-official/chromium-36.0.1985.143.tar.xz test? ( https://commondatastorage.googleapis.com/chromium-browser-official/chromium-36.0.1985.143-testdata.tar.xz )
 _eclasses_=chromium	4a9f555199b35aa57f60b0e9b9627d2a	eutils	06133990e861be0fe60c2b428fd025d9	fdo-mime	0acfe1a88fd8751a1d5dc671168219fa	flag-o-matic	75e24bac8423c515dd9c5717f08feb83	gnome2-utils	f658eba3cc594a21cf6eef4af47daa90	linux-info	2b8c53f6065bdee2d757472215a3088f	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	pax-utils	51ad5130f4a69b1a118ca5296de276ae	portability	a45c088f246ef5091e029f6285d7ce42	python-any-r1	4560effd96d3d2a82e50af7cf87166da	python-utils-r1	8c66c6dabd0295878b68b40dbd0b087b	readme.gentoo	106edea5533517715013de909a333abd	toolchain-funcs	0f1760274637a138b99bb649202ea402	versionator	cd0bcdb170807e4a1984115e9d53a26f	virtualx	73cfc129b4b9ba23aed1abb10c825d86
-_md5_=508426c4c216442d7727a71d4d516098
+_md5_=92c8185f1093d674d617fc6ed68d0536
