@@ -48,18 +48,28 @@ DIST chromium-37.0.2062.68-lite.tar.xz 214344600 SHA256 608aa9b15943594f80d751fa
 DIST chromium-38.0.2114.2-lite.tar.xz 228583844 SHA256 288067699a5043f2f0ff5a279b7926b22d5556cd33964e8d36c93048e734aa14 SHA512 2beb586e70bcc14cdbad042dc5ee1b16c685a75d331da2f068c7e2347040dc140c956913209f04ed6c384c2e080dd72c81e5968abc2f7fcd5d718e7524c23e0a WHIRLPOOL b03b7222585a3d64feed112cd9a859d95d99c5283c099f4d0ce5f254ed4fe75c1dca68313b3d646a3db30c0ddf859e2680416440541d530ca1a963a71c89721d
 DIST chromium-38.0.2121.3-lite.tar.xz 229671460 SHA256 cc949dfc901c187be7005d8e6f9a8c1d46b307891e0deb1a61b7fdca8baa154f SHA512 b15d35abdceb8468d9794dc3c0d1d44168bf54afa8cfcb45f81044a38819349cbcfcd2217da38b58c5a591bd28b836d9818aea6aa0d317e11d9c6f6efb652394 WHIRLPOOL a204e2e47a83624c1ac68dd6adcd5b8f4dc48b573679c434dcf273246beb7cacd2f6c2454122d9910abf2d4be05b67c14074e5e171ec23778beac23c81380b6d
 EBUILD chromium-36.0.1985.125.ebuild 20024 SHA256 d059a8f1c1d4c8a8838d272a2a10bb60eea0a05056e4a073df100529d5714183 SHA512 593b0ca1ed6c1fbdc15b9b0c426f54df337e7031d75bf468b3a3997840309c53c0c59178ad02e0d69de3c9f4a2db19319fafd745141a94f3c8f99ab1feed3722 WHIRLPOOL 52166987d30626c9dbf68ed78c5ca35cbe8d423e2d2f80a5d5bada34f8f0793a6ddd0330be5d4a84235162358e33db045e3b1edfdc5b0de6373dac40bab8189f
-EBUILD chromium-36.0.1985.143.ebuild 20027 SHA256 275fb67977d409d5577cadf011cb52e924b57e0e2f639259f9bf98540d1b6a28 SHA512 96aa46bff52fab8944b852d093663dc8ac3ab58ba04f7c94e88593afaa8207b7cef21e4d3a392ebb85bf107798711da3d595f2a8becca00a27e3bf12d7308e42 WHIRLPOOL af3252993a87fef55aebac49e90eafc7d0cdccc10879b85f42b4094252d2b2e044e0666944b981c8e6044b09ad9f289d72835ff34c9d1cba672247eca1420c7d
+EBUILD chromium-36.0.1985.143.ebuild 20024 SHA256 1263170531138f9902dbd7cd19fe72981faa6340f249a23df06b16b7178a88b5 SHA512 f2301d5b4ea84ea099321da425ac12cfe64981cd60b363102c19a73782cfff54b8967cbb7201e5f788de3a4a7c4dd40459063827e3c134d19368cc4fee7db286 WHIRLPOOL 25acced43e55f7bd48b1750f8f218e180bd4dde31d639cfd3b300bf90d9e83cd583d9b7957af5dd3e1b5150a5f6fbd559cf21a69e590645cb25f35ed5c18d697
 EBUILD chromium-37.0.2062.58.ebuild 17702 SHA256 53ae7801b55bf637c69512e1191d73486326b2cf0dfb4aff249cbb5cf033591d SHA512 e9e9985fe9fddf4ebc6f5c312fee4d7915dd52d16060faaf5199e0b156d017410290f4d1bd41e39f1a2e1be490865d3a38804389c62f8a507adf021dab063dcc WHIRLPOOL 9147dfcd2c8a97c7b9fdb2c23eae4a7369eda5189d557a8c99dc7c85a3da4dcb230e139d1b88d30252ce6eb9a6651d70f0cd8fc56f207d0974ddd2d954ea66fb
 EBUILD chromium-37.0.2062.68.ebuild 17702 SHA256 396066ae3faf329f27d4e433797164b07ed5cddc75fadce3101001d6af0a04c6 SHA512 39c59a84062ae4e8f2bcb27ab78bbe2c66f53679b1df19df92ebde9f7cf3228c0696f424b7a8784daab9d5bb2f3d02a59df74f500b9131c1ba567992b233b445 WHIRLPOOL f2d807dfa0b1ba959967d8a9d99a711bb7bafa8edc0c16263f82f1a84fcf0ca6b7269dddc91ae497e3c657c3740e6ee2597114f464ea6e7a3454b86b61bd881e
 EBUILD chromium-38.0.2114.2.ebuild 17636 SHA256 5258fc2dbc0329e8affefef99c0e2ec83abbdfbe10d4b65a983629163c51bafc SHA512 3d257b1814d17158a5557982bb61f3b615a872676ca56ec292a1f14211dce7ea46109bedc5d67cbb0e33203ca34bd871a552015c0a7f140723d80b57017e81a9 WHIRLPOOL cfce2f7a8152f5580144dc8f5c3ba73b7518642ceab3c4cf7030d7b27abd298f19fe049da2e89f8728d008403382df1e510548ea4d01b6c2982b180de1556d40
 EBUILD chromium-38.0.2121.3.ebuild 17647 SHA256 671704d7223cb56a0668cc0781d1bab3d883be8554f9dce8480acb157c398d99 SHA512 1e4174c457d01fa4daf909b664c7bf086ad40060b2fbaf3f02e43941793263af0a0efb7c1c3ca767d0bc8c121111b69f1e035d6a80b1d1afd02d0bf1b40226f2 WHIRLPOOL 92a7be1f857ecf7c9d7eb320810958de2d16a0e83b00ba3802a39c65dc1224f516667798a829938f9aa01fde89fcdb550f555bfc47e15a2492d43e9a0ec94e46
-MISC ChangeLog 112770 SHA256 78df32f9e22a6f7fb3eb6de7e0e638a86376eb2603864a2def92369ded96c771 SHA512 a6ba0e41e9c9a23964b9b336ccd9fcbc1a5eaf6cbce5725cbf7bb387313782f11598de7af7ea8981760198dfddb777699a89bd6697b283deff22512a9ad2e249 WHIRLPOOL 52a3315ad47bf9dd515c92ece8712817382d5e2d9bb34959e261e1ccbefdceac7fc1cb30d3d90e2ab4397ec3c5caae94abea9c898ef96fe8e625077f6919bb9f
+MISC ChangeLog 112883 SHA256 213035a936382506285816285ee19e778ac4ec24652962d4ea7f9f11229a0a87 SHA512 8a250dbbe5ff43e11609b2b8cc0b4e7374852f8ca04032d658666f70d4f7ca76f085c2904c138c6af06ceae8a4c0e2bb6c5b53948f1fc3c783b3b0aca91b56cf WHIRLPOOL bbd8a1a583a9055e13453dd2bc64de7957bf7ac80fd27fe439dc7a89976ded320884b50e9ff570c938a6018ae69f27798ffc7811ea9a41521d456d79b4c25d23
 MISC ChangeLog-2011 114031 SHA256 e2c2c75785c5eaf78b6efe01e357279cbb7be0c89d00b4053f475e963916fa54 SHA512 8e14759348333bdbd7c338080472789d7bbb1ece1ca5817bac6306bdcb33dda1e23bf3055cbb3b7bcee9362b6900bba1ace7ba73f353570a74d3ed761c9198cc WHIRLPOOL 810b6423c53f892a4b0964380b8190dec2a8783d560a9cb0baec93a77d879186201055382ca05975ae242e16728529ae85445db003fdd425355292d17817157b
 MISC metadata.xml 518 SHA256 821944f32fcf203b2573c164aeaa52fbc69e5f651d366cdda66901633461f5ef SHA512 01d29c4ce93a8a624fc8926e7e72e8bf124b91ae6fdbf6e7179e9d6ddd6db33d73acde62541777118da1c9d197c83d6c615c247d785e76a8ab560f915abd08d5 WHIRLPOOL f9b21a0d032d1f78b6aeb78f759b9f126b1b1cc118a5edd3a08eefcb2d7b51ff406abb95323fe05b4c04468aca68dddd3d39ce7edfb9b352abc1bc3890d7e1ab
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlProOsACgkQCMFw3lXsEjrQXgD9EhOrlFZnYyNMZD6EermDDJBl
-iLuOXw1gS3rgT+87GmoA/jxOAB1ybFal/OJkGyvrAuPK8NZKaPfMvJ+F82oeuQqz
-=JTlL
+iQIcBAEBCAAGBQJT8P0BAAoJELp701BxlEWf78sP/33f9z8RM7T160XTp7n6zglP
+KL8WFd+oqBRJonuENyhLZe/dsrLxgiET4Yj9Dtxd5lSt/kxnfjz/uNPA2H8dyZMa
+exBEkOsj1m2e14NeAV4uxC9stb6tW+OZFDB20f+2wlZ8sLjERZWzqferAeoWuOUE
++M+0Y/CHp9uzylW4rpEuHyNRQsQnK35uje/VaGfJ8n510Mg/Fp+EWtxr7vOWSmlu
+c9NHTAxqcOONKf5FLGSs9M+SIUwIT1cAHeXmchDrFyYja34+b9LDsz3vIGZK6Kwi
+BAILs9KD6sUeiRxGzfKvNkR4JuB0mBQ3c/+hC2WAiYaIJEfTCS0hNOrBYAhsMpMr
+0rZfI8ajHqNAirRQ7QfbmzsbE/i4ymc0NzdyBzm3RckU2Oc0hYVXfoss1U5gAFiU
+qEsD4KTh3ienzQKX5qvP7c5zk8mcPG30uTXkSDrrjGAFF1pZNbjOrqT/u4PbILuQ
+0/Va6dYSXRhNZww4LEzA6kax9ox55UlflyQJbe7Hu5qUrc5+XeQ0JMBirwUK539o
+Y69akvJGzEia7r//JVINYzyNXROkLpfi0mfimut82nOakQU8SXCP+mdv7j/4/QoE
+jh5xR5rPIACzaLbHWchTrYqWdnG4NEGCrOu+CPYeg1CHiVygOzKE0jlgVRe/EsNT
+HWe/73o4oA/VD4yu7Mpz
+=6sZH
 -----END PGP SIGNATURE-----
