@@ -1,6 +1,9 @@
 # ChangeLog for www-client/chromium
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.1118 2014/08/13 17:30:54 rich0 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/chromium/ChangeLog,v 1.1119 2014/08/17 19:05:36 ago Exp $
+
+  17 Aug 2014; Agostino Sarubbo <ago@gentoo.org> chromium-36.0.1985.143.ebuild:
+  Stable for x86, wrt bug #519788
 
   13 Aug 2014; Richard Freeman <rich0@gentoo.org>
   chromium-36.0.1985.143.ebuild:
