@@ -1,6 +1,12 @@
 # ChangeLog for kde-misc/homerun
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/kde-misc/homerun/ChangeLog,v 1.7 2014/05/02 22:20:37 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-misc/homerun/ChangeLog,v 1.8 2014/08/17 19:06:20 johu Exp $
+
+*homerun-1.2.5 (17 Aug 2014)
+
+  17 Aug 2014; Johannes Huber <johu@gentoo.org> +homerun-1.2.5.ebuild,
+  -homerun-1.2.3.ebuild:
+  Version bump, remove old.
 
 *homerun-1.2.4 (02 May 2014)
 
